[gd_scene load_steps=4 format=3 uid="uid://cbyh1vt0443ys"]

[ext_resource type="Theme" uid="uid://c3i7d0q3n8d5e" path="res://fungi_theme.tres" id="1_bgtdn"]
[ext_resource type="Script" uid="uid://chwpt8ctyh6x4" path="res://fungi_ui.gd" id="1_v67og"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v67og"]

[node name="FungiUI" type="Control" groups=["fungi_ui"]]
custom_minimum_size = Vector2(300, 160)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_bottom = 160.0
grow_horizontal = 0
mouse_filter = 2
theme = ExtResource("1_bgtdn")
script = ExtResource("1_v67og")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.6666667)
custom_minimum_size = Vector2(360, 160)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_bottom = 180.0
grow_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v67og")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(300, 120)
layout_mode = 1
offset_right = 300.0
offset_bottom = 273.0
mouse_filter = 2

[node name="HifasStatus" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Hifas: BLOQUEADAS
"

[node name="Nutrientes" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Nutrientes: 0.0
"

[node name="Biomasa" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Biomasa: 0.0
"

[node name="DesbloquearHifas" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Metabolismo" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Nutrientes: 0.0
"

[node name="EpsilonEff" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Nutrientes: 0.0
"
